--- a/examples/imagenette/requirements.txt
+++ b/examples/imagenette/requirements.txt
@@ -1,5 +1,7 @@
+wandb>=0.10.8
+pandas>=1.1.3
 albumentations>=0.1.12
 pretrainedmodels>=0.7.4
-https://github.com/ceshine/pytorch_helper_bot/archive/0.5.0.zip
+https://github.com/ceshine/pytorch_helper_bot/archive/pt16-v1.zip
 tensorboardX
 efficientnet_pytorch
